--- a/AQL/src/main/AndroidManifest.xml
+++ b/AQL/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
         </activity>
         <activity android:name=".activities.selectcity.SelectCityActivity">
         </activity>
-        <activity android:name=".activities.UserCenterActivity.UserCenterActivity">
+        <activity android:name=".activities.usercenter.UserCenterActivity">
         </activity>
         <activity android:name=".activities.visa.VisaActivity">
         </activity>
